# quiz-ui

./: .gitignore  CLI_quiz_guide.md  MANIFEST.in  QUIZ_FORMAT.md  README.md  launcher.py  launcher.spec  pyproject.toml  requirements.txt  run_quiz_server.py
.claude/: settings.local.json
.github/workflows/: build.yml
app/: __init__.py  main.py  models.py  quiz_parser.py
app/static/css/: quiz_ui.css
app/static/js/: quiz.js
app/templates/: base.html  quiz.html  start.html  summary.html
quiz_ui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
static/css/: quiz_ui.css
static/js/: quiz.js
templates/: base.html  quiz.html  summary.html
