[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quiz-ui"
version = "0.1.0"
description = "Lightweight Flask quiz UI that renders practice_test.md and serves it locally"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
]

[project.scripts]
quiz-ui = "run_quiz_server:main"

[tool.setuptools]
packages = ["app"]
py-modules = ["run_quiz_server"]
include-package-data = true
